--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
             <br>
             <h3>KitsuneDev👩‍💻</h3><!--Nombre-->
         </div>
-            <a href="https://github.com/es-abii76" target="_blank"><div id="github" class="grid-item rt"><img class="logo" src="./sources/github.svg" alt="github"></div></a><!--Boton github-->
-            <a href="https://steamcommunity.com/id/abii76/" target="_blank"><div id="steam" class="grid-item rt"><img class="logo" src="./sources/steam.svg" alt="steam"></div></a><!--Boton steam-->
+            <a href="https://github.com/KitsuneDev1" target="_blank"><div id="github" class="grid-item rt"><img class="logo" src="./sources/github.svg" alt="github"></div></a><!--Boton github-->
+            <a href="https://steamcommunity.com/id/emmokitsune/" target="_blank"><div id="steam" class="grid-item rt"><img class="logo" src="./sources/steam.svg" alt="steam"></div></a><!--Boton steam-->
             <a href="discord.html" target="_blank"><div id="discord" class="grid-item rt"><img class="logo" src="./sources/discord.svg" alt="discord"></div></a><!--boton Discord-->
-            <a href="https://t.me/abii_76" target="_blank"><div id="telegram" class="grid-item rt"><img class="logo" src="./sources/telegram.svg" alt="itch"></div></a><!--Boton itch.io-->
+            <a href="https://emmokitsune.itch.io/" target="_blank"><div id="telegram" class="grid-item rt"><img class="logo" src="./sources/telegram.svg" alt="itch"></div></a><!--Boton itch.io-->
             <div class="grid-item grid-desc">
                 <div id="descripcion">
                     <p>Hola soy KitsuneDev,Desarrollador de videojuegos.</p>
                     <p>Hago juegos,Le hice rickroll a 900 personas,Uso unity,Hago Pixel art y Voxel art.</p>
+                    <a href="games.html" target="_blank">Mis juegos</a>
                     
                 </div>
             </div>
